fix: spacing and font sizing in dashboard welcome & my team

--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -14,10 +14,12 @@
 /* !!! COME BACK */
 .team-name {
     font-size: 1.65vw; 
+    margin-bottom: 2vh;
 }
 
 .my_team__title {
-    margin-bottom: 4vh;
+    margin-bottom: 2vh;
+    /* margin-bottom: 4vh; */
 }
 
 .top-row {
@@ -49,9 +51,9 @@
 
 
 .dashboard__username {
-    font-size: 3vw;
+    font-size: 2vw;
     margin: 0;
-    margin-top: 0.5vw;
+    margin-top: 1.5vw;
 }
 
 .top1__welcome_container {
